--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,7 @@ networks:
 
 services:
 
-  db:
-    container_name: db
+  database:
     image: postgres
     environment:
       POSTGRES_USER: db
@@ -14,20 +13,22 @@ services:
       POSTGRES_DB: backend
     ports:
       - 5432:5432
-    networks:
-      - api-backend
+
+  cache:
+    image: redis
+    ports:
+      - 6379:6379
 
   backend:
-    container_name: api
     build:
       context: ./.docker/backend
     tty: true
     volumes:
-      - .:/workspaces
+      - .:/workspaces:cached
     ports:
       - 8080:8080
     depends_on:
-      - db
-    networks:
-      - api-backend
+      - database
+      - cache
+
 
