--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,5 @@
 swagger:
-    config:
-        url: http://localhost:8080
+    server-url: ${SERVER_URL}
 
 spring:
     cache:
@@ -8,24 +7,23 @@ spring:
 
     data:
         redis:
-            host: cache
-            port: 6379
+            host: ${REDIS_HOST}
+            port: ${REDIS_PORT}
 
     devtools:
         restart:
             enabled: true
 
     datasource:
-        url: jdbc:postgresql://db:5432/backend
-        username: db
-        password: db
+        url: jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}
+        username: ${POSTGRES_USER}
+        password: ${POSTGRES_PASSWORD}
         driver-class-name: org.postgresql.Driver
 
     jpa:
         hibernate:
             ddl-auto: validate
         show-sql: false
-        database-platform: org.hibernate.dialect.PostgreSQLDialect
 
 springdoc:
     api-docs:
