--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
         restart:
             enabled: true
     datasource:
-        url: jdbc:postgresql://db:5432/backend
+        url: jdbc:postgresql://localhost:5432/backend
         username: db
         password: db
         driver-class-name: org.postgresql.Driver
@@ -23,7 +23,3 @@ springdoc:
         path: /api-docs
 viacep-api:
     baseUrl: https://viacep.com.br/ws
-
-jwt:
-    secret:
-        key: classpath:app.key
